rs/embedders/tests/snapshots/instrumentation__metering_memory_fill.snap
---
source: embedders/tests/instrumentation.rs
expression: out
---
(module
  (type (;0;) (func))
  (type (;1;) (func (param i32 i32) (result i32)))
  (type (;2;) (func (param i32) (result i32)))
  (import "__" "out_of_instructions" (func (;0;) (type 0)))
  (import "__" "update_available_memory" (func (;1;) (type 1)))
  (func (;2;) (type 0)
    global.get 0
    i64.const 4
    i64.sub
    global.set 0
    global.get 0
    i64.const 0
    i64.lt_s
    if  ;; label = @1
      call 0
    end
    i32.const 0
    i32.const 1
    i32.const 16
    call 3
    memory.fill)
  (func (;3;) (type 2) (param i32) (result i32)
    global.get 0
    local.get 0
    i64.extend_i32_u
    i64.lt_s
    if  ;; label = @1
      call 0
    end
    global.get 0
    local.get 0
    i64.extend_i32_u
    i64.sub
    global.set 0
    local.get 0)
  (memory (;0;) 1)
  (global (;0;) (mut i64) (i64.const 0))
  (export "memory" (memory 0))
  (export "canister counter_instructions" (global 0)))

